added new feats